WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
193285
WebKit Networking process crashes if the HTTPSUpgradeList is not found in the bundle
https://bugs.webkit.org/show_bug.cgi?id=193285
Summary
WebKit Networking process crashes if the HTTPSUpgradeList is not found in the...
Chris Dumez
Reported
2019-01-09 09:28:45 PST
WebKit Networking process crashes if the HTTPSUpgradeList is not found in the bundle.
Attachments
Patch
(2.39 KB, patch)
2019-01-09 09:51 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2019-01-09 09:29:00 PST
<
rdar://problem/47147610
>
Chris Dumez
Comment 2
2019-01-09 09:51:47 PST
Created
attachment 358712
[details]
Patch
Geoffrey Garen
Comment 3
2019-01-09 09:59:54 PST
Comment on
attachment 358712
[details]
Patch r=me
Chris Dumez
Comment 4
2019-01-09 10:09:07 PST
Comment on
attachment 358712
[details]
Patch Clearing flags on attachment: 358712 Committed
r239776
: <
https://trac.webkit.org/changeset/239776
>
Chris Dumez
Comment 5
2019-01-09 10:09:09 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug