Cherry-pick r239776. rdar://problem/47147610

WebKit Networking process crashes if the HTTPSUpgradeList is not found in the bundle
    https://bugs.webkit.org/show_bug.cgi?id=193285
    <rdar://problem/47147610>

    Reviewed by Geoffrey Garen.

    * NetworkProcess/NetworkHTTPSUpgradeChecker.cpp:
    (WebKit::networkHTTPSUpgradeCheckerDatabasePath):
    (WebKit::NetworkHTTPSUpgradeChecker::NetworkHTTPSUpgradeChecker):

    Canonical link: https://commits.webkit.org/207783@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@239776 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/207701.4@safari-607-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-607-branch@239781 268f45cc-cd09-0410-ab3c-d52691b4dbfc